src/parser/snapshots/coconut__parser__expression__tests__expr_bp_assignment-5.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x += x * x\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "+=",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "BinaryExpression",
    "operator": "*",
    "left": {
      "type": "Identifier",
      "name": "x",
      "start": 5,
      "end": 6
    },
    "right": {
      "type": "Identifier",
      "name": "x",
      "start": 9,
      "end": 10
    },
    "start": 5,
    "end": 10
  },
  "start": 0,
  "end": 10
}
