src/parser/snapshots/coconut__parser__expression__tests__expr_bp_infix-12.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x !== 1\".into()).unwrap().1"
---
{
  "type": "BinaryExpression",
  "operator": "!==",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "Literal",
    "value": 1.0,
    "start": 6,
    "end": 7
  },
  "start": 0,
  "end": 7
}
